# openpaper

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  docker-compose.local.yml.example
jobs/: .env.example  Dockerfile  README.md  extract_svg.py  pyproject.toml
jobs/scripts/: health_check.py  health_check.sh  start.sh  start_api.sh  start_beat.sh  start_flower.sh  start_worker.sh
jobs/src/: __init__.py  app.py  calculator.py  celery_app.py  data_table_processor.py  image_helpers.py  llm_client.py  llm_config.py  parser.py  pdf_processor.py  prompts.py  s3_service.py  schemas.py  tasks.py  telemetry.py  utils.py
jobs/tests/: test_calculator.py
server/: .env.example  Dockerfile  README.md  alembic.ini  api.py  gunicorn.config.py  mypy.ini  pyproject.toml  shell.py  start.sh  subscription_schedules_refactor.py
server/app/: __init__.py  main.py
server/app/api/: ai_annotation_api.py  ai_highlight_api.py  annotation_api.py  api.py  auth_api.py  conversation_api.py  discover_api.py  document_api.py  highlight_api.py  message_api.py  onboarding_api.py  paper_api.py  paper_audio_api.py  paper_image_api.py  paper_search_api.py  paper_tag_api.py  paper_upload_api.py  project_audio_api.py  search_api.py  subscription_api.py  webhook_api.py  zotero_import_api.py
server/app/auth/: README.md  dependencies.py  email.py  google.py  utils.py  zotero.py
server/app/benchmark/: discover_latency.py  exa_results_Human-AI interaction.json  openalex_exa_results_Human-AI interaction.json
server/app/database/: admin.py  config.py  database.py  models.py  telemetry.py
server/app/helpers/: abuse_detection.py  advisory_locks.py  calculator.py  celery_config.py  citations.py  discover.py  email.py  exa_search.py  hypothesis.py  metadata_hydration.py  openalex_search.py  paper_search.py  parser.py  pdf_jobs.py  referral_jobs.py  s3.py  scrape.py  subscription_limits.py
server/app/integrations/: zotero_api.py
server/app/llm/: base.py  citation_agent.py  citation_handler.py  citation_recovery.py  conversation_operations.py  evidence_operations.py  hypothesis_operations.py  json_parser.py  multi_paper_operations.py  operations.py  paper_operations.py  prompts.py  provider.py  routing_config.py  schemas.py  speech.py  utils.py
server/app/schemas/: citation.py  discover.py  message.py  paper.py  paper_tag.py  responses.py  scope.py  user.py  zotero.py
server/app/scripts/: backfill_paper_metadata.py  backfill_paper_passages.py  migrate_keywords_to_tags.py  run_migrations.py
server/app/services/: zotero_import.py
server/app/tasks/: audio_overview.py  hypothesis.py  hypothesis_step.py
server/evals/: README.md  collect_papers.py  data_table_eval_manifest.json  download_evals_dataset.sh  download_evals_results.sh  generate_dataset.py  paper.md  run_benchmark.py  run_data_table_eval.py  upload_evals_dataset.sh  upload_evals_results.sh
server/migrations/: env.py
server/migrations/versions/: 2025_03_22_2333_initial_migration.py  2025_03_23_0108_document.py  2025_03_24_0113_expand_documents.py  2025_03_24_0412_create_document.py  2025_03_25_0033_make_conversations_and_messages.py  2025_03_28_0025_make_note.py  2025_04_03_1523_add_highlight_data_models.py  2025_04_05_2325_deletable_documents.py  2025_04_11_0015_add_auth.py  2025_04_11_2117_add_user_fields_to_other_objects.py  2025_04_12_0545_add_s3_object_key_to_doc.py  2025_04_25_0107_rename_document_paper.py  (+66 more)
server/tests/: __init__.py  test_calculator.py  test_normalize_paper_title.py  test_scope.py  test_zotero_auto_import_window.py  test_zotero_import_dedup.py  test_zotero_import_limits.py  test_zotero_sync.py
(+339 files in other folders)
