[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "open-paper"
version = "0.1.0"
requires-python = ">= 3.12"
description = "An Application to Read & Understand Papers with AI"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic[email]>=2.10",
    "python-dotenv>=1.2.2",
    "google-genai>=1.7.0",
    "requests>=2.33.0",
    "requests-oauthlib>=2.0.0",
    "sqlalchemy>=2.0.39",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.15.1",
    "python-multipart>=0.0.31",
    "pydantic-settings>=2.8.1",
    "types-psycopg2>=2.9.21.20250318",
    "types-requests>=2.32.0.20250306",
    "sqlalchemy2-stubs>=0.0.2a38",
    "boto3>=1.37.33",
    "types-boto3>=1.37.33",
    "sqladmin[full]>=0.25.1",
    "itsdangerous>=2.2.0",
    "gunicorn>=23.0.0",
    "firecrawl-py>=4.28.2",
    "openai>=1.82.0",
    "anthropic>=0.96.0",
    "posthog>=4.2.0",
    "resend>=2.10.0",
    "celery>=5.5.3",
    "stripe>=12.3.0",
    "pypdf>=6.13.3",
    "exa-py>=1.0.0",
]

[project.scripts]
# openpaper = "app.main"
start = "app:start"

[tool.uv]
constraint-dependencies = [
    "pyasn1>=0.6.3",
    "aiohttp>=3.14.1",
    "mako>=1.3.11",
    "urllib3>=2.7.0",
    "starlette>=1.3.1",
]

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]
show_error_codes = true
strict = true
